logs/Slang/generated/hdlconv/hdlconvertor_p230.sv.log
name: hdlconvertor_p230
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:2:1: error: use of undeclared identifier 'process'
process job[] = new [N];
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:2:17: error: language feature not yet supported
process job[] = new [N];
                ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:3:1: error: language feature not yet supported
foreach (job[j])
^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:5:19: error: use of undeclared identifier 'j'
automatic int k = j;
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:6:16: error: unknown class or package 'process'
begin job[k] = process::self(); end
               ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:8:1: error: language feature not yet supported
foreach (job[j])
^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p230.sv:12:1: error: language feature not yet supported
foreach (job[j]) begin
^~~~~~~~~~~~~~~~~~~~~~
